force-app/main/default/objects/BGCK__Page_Question__c/BGCK__Page_Question__c.object-meta.xml
<CustomObject>
    <label>Page Question</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>