force-app/main/default/objects/BGCK__Page_Question__c/fields/abd_Page_order__c.field-meta.xml
<CustomField>
    <fullName>abd_Page_order__c</fullName>
    <formula>BGCK__Page__r.BGCK__Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Page order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>