force-app/main/default/objects/BGCK__Page_Question__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Application_Type</valueSetName>
    </valueSet>
</CustomField>