force-app/main/default/objects/BGCK__Page_Question__c/fields/BGCK__BG_Checklist_Name__c.field-meta.xml
<CustomField>
    <fullName>BGCK__BG_Checklist_Name__c</fullName>
    <formula>BGCK__Page__r.BGCK__Checklist_Version__r.BGCK__BG_Checklist_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checklist Name</label>
    <type>Text</type>
</CustomField>