force-app/main/default/objects/BGCK__Page_Question__c/fields/BGCK__Checklist_Version_Status__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Checklist_Version_Status__c</fullName>
    <formula>text(BGCK__Page__r.BGCK__Checklist_Version__r.BGCK__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checklist Version Status</label>
    <type>Text</type>
</CustomField>