force-app/main/default/objects/BGCK__Page_Question__c/fields/BGCK__Criteria__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Criteria__c</fullName>
    <label>Criteria</label>
    <type>TextArea</type>
</CustomField>