force-app/main/default/objects/BGCK__Page_Question__c/fields/BGCK__IsRequired__c.field-meta.xml
<CustomField>
    <fullName>BGCK__IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>