force-app/main/default/objects/BGCK__Page_Question__c/fields/BGCK__Order__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This can not have decimal point,  must be a integer</description>
    <label>Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>