force-app/main/default/objects/BGCK__Page_Question__c/fields/BGCK__Page__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Page__c</fullName>
    <label>Page</label>
    <referenceTo>BGCK__Page__c</referenceTo>
    <relationshipLabel>Page Questions</relationshipLabel>
    <relationshipName>Page_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>