force-app/main/default/objects/BGCK__Page_Question__c/fields/BGCK__Parent_Page_Question__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Parent_Page_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Page Question</label>
    <referenceTo>BGCK__Page_Question__c</referenceTo>
    <relationshipLabel>Page Questions</relationshipLabel>
    <relationshipName>Page_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>