force-app/main/default/objects/BGCK__Page_Question__c/fields/BGCK__Question_Number__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Question_Number__c</fullName>
    <formula>BGCK__Question__r.BGCK__Question_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Number</label>
    <type>Text</type>
</CustomField>