force-app/main/default/objects/BGCK__Page_Question__c/fields/BGCK__SubQuestion__c.field-meta.xml
<CustomField>
    <fullName>BGCK__SubQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubQuestion</label>
    <referenceTo>BGCK__Question__c</referenceTo>
    <relationshipLabel>Page Questions (SubQuestion)</relationshipLabel>
    <relationshipName>SubQuestion</relationshipName>
    <type>Lookup</type>
</CustomField>