force-app/main/default/objects/BGCK__Page_Question__c/fields/Display_order__c.field-meta.xml
<CustomField>
    <fullName>Display_order__c</fullName>
    <formula>If( abd_Page_order__c  >9, text(abd_Page_order__c),"0" &amp;text(abd_Page_order__c)) &amp; " - "&amp; If( BGCK__Order__c  >9, text(BGCK__Order__c),"0" &amp;text(BGCK__Order__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display order</label>
    <type>Text</type>
</CustomField>