force-app/main/default/objects/BGCK__Page_Question__c/fields/Field_Map__c.field-meta.xml
<CustomField>
    <fullName>Field_Map__c</fullName>
    <label>Field Map</label>
    <type>TextArea</type>
</CustomField>